sm7250-common: On Sunfish enable minimum confirmation duration for sending network score to
connectivity service

Bug: 166152800

Test: verified feature works on device

Signed-off-by: Mingguang Xu <mingguangxu@google.com>
Change-Id: Ie4b696581c380ec05b58c5509ae9d67f3c21533e

--- a/rro_overlays/WifiOverlay/res/values/config.xml
+++ b/rro_overlays/WifiOverlay/res/values/config.xml
@@ -86,4 +86,6 @@
     <!-- Do not translate. Default access point SSID used for tethering -->
     <string name="wifi_tether_configure_ssid_default" translatable="false">MotorolaAP</string>
 
+    <!-- Enable adding minimum confirmation duration when sending network score to connectivity service. -->
+    <bool translatable="false" name="config_wifiMinConfirmationDurationSendNetworkScoreEnabled">true</bool>
 </resources>
