--- a/overlay/frameworks/base/core/res/res/values/config.xml
+++ b/overlay/frameworks/base/core/res/res/values/config.xml
@@ -378,6 +378,7 @@
         <item>/apex/com.android.art/javalib/core-libart.jar</item>
         <item>/apex/com.android.media/javalib/updatable-media.jar</item>
         <item>/system/lib64/libsurfaceflinger.so</item>
+        <item>/system_ext/priv-app/SystemUI/SystemUI.apk</item>
     </string-array>
 
     <!-- True if camera app should be pinned via Pinner Service -->
